--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+    	<meta name="description" content="上传你所见过的垃圾代码,让大家开心开心" />
+		<meta name="keywords" content="垃圾代码, 代码, 垃圾, 上传, 开心代码, 快乐程序员, 编程,快乐"/>
+		<meta name="author" content="Keyang Xiang"/>
+		<meta charset="UTF-8"> 
+        <title>垃圾代码</title>
+
+        <link rel="stylesheet" type="text/css" href="./css/main.css"/>
+        <script type="text/javascript" src="./js/jquery.min.js"></script>
+        <script type="text/javascript" src="./js/templ.js"></script>
+        <script type="text/javascript" src="./js/app.js"></script>
     </head>
 
     <body>
+        <div id="bg"></div>
+        <div id="header">
+            <div class="container">
+                <a href="#"><img src="./images/logo.png" id="logo"/></a>
+                <a href="#" class="menu_item">上传代码</a>
+                <a href="#" class="menu_item">最新上传</a>
+                <a href="#" class="menu_item">最热代码</a>
+                <a href="#" class="menu_item">订阅RSS</a>
+                <div id="board">
+                    Hi,程序员亲们,时时感觉鸭梨山大?在这里贴上你见过的垃圾代码,轻松一下吧。
+                </div>
+            </div>
+        </div>
+        <div class="container" id="body">
+            <ul id="list">
+                
+            </ul>
+        </div>
+        
     </body>
 </html>
