--- a/src/web/index.html
+++ b/src/web/index.html
@@ -4,13 +4,19 @@
     	<meta name="description" content="上传你所见过的垃圾代码,让大家开心开心" />
 		<meta name="keywords" content="垃圾代码, 代码, 垃圾, 上传, 开心代码, 快乐程序员, 编程,快乐"/>
 		<meta name="author" content="Keyang Xiang"/>
-		<meta charset="UTF-8"> 
+		<meta charset="UTF-8"/> 
         <title>垃圾代码</title>
 
         <link rel="stylesheet" type="text/css" href="./css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="./css/sh.css"/>
         <script type="text/javascript" src="./js/jquery.min.js"></script>
+        <script type="text/javascript" src="./js/sh/shCore.js"></script>
+        <script type="text/javascript" src="./js/sh.js"></script>
+        <script type="text/javascript" src="./js/sh/shBrushPlain.js"></script>
+        <script type="text/javascript" src="./js/sh/shBrushJScript.js"></script>
         <script type="text/javascript" src="./js/templ.js"></script>
         <script type="text/javascript" src="./js/app.js"></script>
+        <script type="text/javascript" src="./js/list.js"></script>
     </head>
 
     <body>
@@ -32,6 +38,6 @@
                 
             </ul>
         </div>
-        
     </body>
 </html>
+
