--- a/src/web/index.html
+++ b/src/web/index.html
@@ -11,9 +11,8 @@
         <link rel="stylesheet" type="text/css" href="./css/sh.css"/>
         <script type="text/javascript" src="./js/jquery.min.js"></script>
         <script type="text/javascript" src="./js/sh/shCore.js"></script>
+        <script type="text/javascript" src="./js/sh/shAutoloader.js"></script>
         <script type="text/javascript" src="./js/sh.js"></script>
-        <script type="text/javascript" src="./js/sh/shBrushPlain.js"></script>
-        <script type="text/javascript" src="./js/sh/shBrushJScript.js"></script>
         <script type="text/javascript" src="./js/templ.js"></script>
         <script type="text/javascript" src="./js/app.js"></script>
         <script type="text/javascript" src="./js/list.js"></script>
