added forkeme; some ui change

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -22,12 +22,16 @@
     </head>
 
     <body>
+        <div  id="fork_me">
+            <a href="https://github.com/keyang/crapcode"><img src="./images/forkme.png"/></a>
+        </div>
+
         <div class="modal_bg">
         </div>
         <div id="bg"></div>
         <div id="header">
             <div class="container">
-                <a href="#"><img src="./images/logo.png" id="logo"/></a>
+                <a href="/"><img src="./images/logo.png" id="logo"/></a>
                 <a href="#uploadCode" class="menu_item" id="btn_upload_code">上传垃圾</a>
                 <a href="#" class="menu_item">最新上传</a>
                 <a href="#" class="menu_item">最火垃圾</a>
