added rss publisher

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -33,9 +33,9 @@
             <div class="container">
                 <a href="/"><img src="./images/logo.png" id="logo"/></a>
                 <a href="#uploadCode" class="menu_item" id="btn_upload_code">上传垃圾</a>
-                <a href="#" class="menu_item">最新上传</a>
-                <a href="#" class="menu_item">最火垃圾</a>
-                <a href="#" class="menu_item">订阅RSS</a>
+                <a href="/" class="menu_item">最新上传</a>
+                <a href="/best" class="menu_item">最火垃圾</a>
+                <a href="/api/rss" class="menu_item">订阅RSS</a>
                 <div id="board">
                     Hi,程序员亲们,时时感觉鸭梨山大?在这里贴上你见过的垃圾代码,轻松一下吧。
                 </div>
