added load one item

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="./js/brushes.js"></script>
         <script type="text/javascript" src="./js/list.js"></script>
         <script type="text/javascript" src="./js/uploadCode.js"></script>
+        <script type="text/javascript" src="./js/one.js"></script>
     </head>
 
     <body>
@@ -49,8 +50,8 @@
         <div id="footer">
             <a id="loadMore" href="javascript:;"><img src="./images/download.png"/><span>加载更多</span></a>
             <div  id="loadingList">加载中...</div>
-            <span class="smallFont">RSS Feeds from: <a href="http://codecrap.com">codecrap.com</a></span>
-            <span class="developer smallFont">Developed by <a id="author_github" href="http://keyangxiang.com"><img src="./images/website.png"/>Keyang Xiang</a></span>
+            <span class="smallFont">RSS Feeds from: <a href="http://codecrap.com" target="_blank">codecrap.com</a>.  Powered by <a href="http://nodejs.org" target="_blank">Node.Js</a> &  <a href="http://www.mongodb.org/" target="_blank">MongoDB</a>.</span>
+            <span class="developer smallFont">Developed by <a id="author_github" href="http://keyangxiang.com"><img src="./images/website.png"/>Keyang Xiang</a>.  Fork on <a href="https://github.com/keyang/crapcode">Github</a></span>
         </div>
         <div id="uploadCode" class="dlg">
             <div class="wrapper">
